Update .gitignore, add placeholders for datasets and results

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,14 @@ Thumbs.db
 .env
 
 manual_inputs
+
+# --- Datasets ---
+datasets/*.json
+!datasets/.gitkeep
+
+# --- Results ---
+results/*
+!results/.gitkeep
+
+# --- Model checkpoints ---
+saved_paraphrasing_model/
